change the tile root

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				initialState: {
 					mapConfig: {
 						borderApothem: 10000,
-						tilesRoot: "https://civmc-map.duckdns.org/tiles/",
+						tilesRoot: "https://civmc-map.knijn.one/tiles/",
 						basemaps: {
 							terrain: {
 								name: "Terrain (Bronnakus)",
