--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="Description" content="Interactive map of CivMC" />
 		<title>CivMC Map</title>
 		<meta property="og:type" content="object" />
-		<meta property="og:url" content="https://civmc-map.github.io/" />
+		<meta property="og:url" content="https://civmc-maptest.github.io/" />
 		<meta property="og:site_name" content="CivMC Map" />
 		<meta property="og:title" content="CivMC Map" />
 		<meta property="og:description" content="Interactive map of CivMC" />
