--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					{ source: "territories-thejmqn.json", enabled_presentation: false },
 					{ source: "portals.json", enabled_presentation: false },
 					{ source: "https://raw.githubusercontent.com/OneDest/data/master/civmap.json", enabled_presentation: false },
-                                        { source: "https://raw.githubusercontent.com/VilyanZ/Civmc-Railmap/main/Rail%20Map%20(VilyanZ).json", enabled_presentation: false },
+                                        { source: "testtt.json", enabled_presentation: false },
 					{ source: "https://raw.githubusercontent.com/Thejmqn/CivMCSettlements/main/CivMCSettlements.json", enabled_presentation: false },
 				],
 				initialState: {
